2020-10-11  Adam Fox <adam.fox@eggplantsoftware.com>

	* Source/NSData.m: Implement rangeOfData:options:range.

2020-10-06  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSURL.h,
	* Source/NSURL.h: Add NSURL methods:
	-URLByAppendingPathComponent:isDirectory:
	-isFileReferenceURL (always returns NO)
	-fileReferenceURL
	-filePathURL

2020-08-30  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSDateComponentsFormatter.m: Fix use of wrong operator.

2020-08-02 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSNotification.h: Add NSNotificatioName typedef

2020-07-13  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSURLRequest.h:
	* Source/NSURLRequest.m:
	Update NSURLRequest header to use "instancetype".

2020-07-08  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSLog.m:
	Don't log current thread if its identical to private thread ID.
	This makes the log more succinct when GSLogThread is enabled and the
	system doesn't provide an OS-level thread ID (i.e. GSPrivateThreadID()
	returns GSCurrentThread()), which would previously cause the NSThread
	pointer to be logged twice.

2020-07-08  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSLog.m,
	* Source/NSProcessInfo.m: Improve NSLog output on Android.
	We now always set -GSLogSyslog, as stdout/stderr is not available on
	Android. Also fixes log output containing extraneous date/time.

2020-07-06  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSThread.m: Fix possible deadlock when becoming multi-
	threaded.

2020-06-14 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSKeyedArchiver.h
	* Source/NSKeyedArchiver.m
	* Source/NSKeyedUnarchiver.m: Add setter for requiresSecureCoding.

2020-06-11  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSValueTransformer.m:
	Fix recursive creation of value transformers.
	* Tests/base/NSValueTransformer/basic.m:
	Add tests for NSValueTransformer.
